# studio-split-sign

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HIRING_MANAGER.md  README.md  docker-compose.postgres.yml  docker-compose.yml  docs.md  package-lock.json  package.json  server.js
content/: blog-posts.js
deploy/aws/: README.md  bootstrap-alb.ps1  bootstrap-ecs.ps1  bootstrap-networking.ps1  bootstrap-secrets.ps1  bootstrap-staging.ps1  deploy-ecs-service.ps1  provision-datastores.ps1  (+4 more)
docs/: api.md  architecture.md  deployment.md  e2e-invite-flow.md  ops.md  product-recommendations.md  public-launch.md  qa-checklist.md  release-checklist.md  repo-tour.md  security.md  split-sheet-walkthrough.md
public/: style.css
scripts/: setup-local-postgres.ps1
services/: auth-service.js  database-service.js  split-sheet-service.js  storefront-service.js  submission-service.js
tests/: smoke-postgres.cjs  smoke.cjs
views/: admin-login.ejs  admin-split-detail.ejs  admin.ejs  auth-forgot-password.ejs  auth-message.ejs  auth-reset-password.ejs  auth-signup.ejs  blog-index.ejs  blog-post.ejs  checkout-cancel.ejs  checkout-success.ejs  index.ejs  landing.ejs  pricing.ejs  split-sheet.ejs  split-sign-success.ejs  split-sign.ejs  success.ejs  sync-collab.ejs  work-for-hire.ejs
vst/: CMakeLists.txt  README.md  build-and-install.ps1  package-installer.ps1
vst/installer/: POSTINSTALL.txt  SplitSheetStudio.iss
vst/src/: ApiClient.cpp  ApiClient.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
